tests/typechecking/correct/constlist.spl
export Int main() {
	[Int] a = [];
	return 1;
}
