tests/typechecking/fail/multivar.spl
Int a = 1;
Char a = 'a';

